// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing cart Contains a Taxes section if Core options are set to show it 1`] = `
<div>
  <div
    aria-hidden="true"
    class="with-scroll-to-top__scroll-point"
  />
  <h2
    class="wc-block-components-title"
  >
    Your cart (3 items)
  </h2>
  <div
    class="wc-block-components-sidebar-layout wc-block-cart"
  >
    <iframe
      aria-hidden="true"
      frameborder="0"
      src="about:blank"
      style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
    <div
      class="wc-block-components-main wc-block-cart__main"
    >
      <table
        class="wc-block-cart-items"
      >
        <thead>
          <tr
            class="wc-block-cart-items__header"
          >
            <th
              class="wc-block-cart-items__header-image"
            >
              <span>
                Product
              </span>
            </th>
            <th
              class="wc-block-cart-items__header-product"
            >
              <span>
                Details
              </span>
            </th>
            <th
              class="wc-block-cart-items__header-total"
            >
              <span>
                Total
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="wc-block-cart-items__row"
          >
            <td
              aria-hidden="true"
              class="wc-block-cart-item__image"
            >
              <a
                href="https://example.org"
                tabindex="-1"
              >
                <img
                  alt=""
                  src="assets/img/beanie.jpg"
                />
              </a>
            </td>
            <td
              class="wc-block-cart-item__product"
            >
              <a
                class="wc-block-components-product-name"
                href="https://example.org"
              >
                Beanie
              </a>
              <div
                class="wc-block-components-product-badge wc-block-components-product-low-stock-badge"
              >
                2 left in stock
              </div>
              <div
                class="wc-block-cart-item__prices"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-product-price__value"
                  >
                    $6.40
                  </span>
                </span>
              </div>
              <div
                class="wc-block-components-product-metadata"
              >
                <div
                  class="wc-block-components-product-metadata__description"
                >
                  <p>
                    Warm hat for winter
                  </p>
                  

                </div>
                <ul
                  class="wc-block-components-product-details"
                >
                  <li
                    class="wc-block-components-product-details__color"
                  >
                    <span
                      class="wc-block-components-product-details__name"
                    >
                      Color
                      :
                    </span>
                     
                    <span
                      class="wc-block-components-product-details__value"
                    >
                      Yellow
                    </span>
                  </li>
                  <li
                    class="wc-block-components-product-details__size"
                  >
                    <span
                      class="wc-block-components-product-details__name"
                    >
                      Size
                      :
                    </span>
                     
                    <span
                      class="wc-block-components-product-details__value"
                    >
                      Small
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="wc-block-cart-item__quantity"
              >
                <div
                  class="wc-block-components-quantity-selector"
                >
                  <input
                    aria-label="Quantity of Beanie in your cart."
                    class="wc-block-components-quantity-selector__input"
                    min="0"
                    step="1"
                    type="number"
                    value="2"
                  />
                  <button
                    aria-label="Reduce quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--minus"
                  >
                    －
                  </button>
                  <button
                    aria-label="Increase quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--plus"
                  >
                    ＋
                  </button>
                </div>
                <button
                  class="wc-block-cart-item__remove-link"
                >
                  Remove item
                </button>
              </div>
            </td>
            <td
              class="wc-block-cart-item__total"
            >
              <div
                class="wc-block-cart-item__total-price-and-sale-badge-wrapper"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-product-price__value"
                  >
                    $12.80
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="wc-block-cart-items__row"
          >
            <td
              aria-hidden="true"
              class="wc-block-cart-item__image"
            >
              <a
                href="https://example.org"
                tabindex="-1"
              >
                <img
                  alt=""
                  src="assets/img/cap.jpg"
                />
              </a>
            </td>
            <td
              class="wc-block-cart-item__product"
            >
              <a
                class="wc-block-components-product-name"
                href="https://example.org"
              >
                Cap
              </a>
              <div
                class="wc-block-cart-item__prices"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="screen-reader-text"
                  >
                    Previous price:
                  </span>
                  <del
                    class="wc-block-components-product-price__regular"
                  >
                    $12.80
                  </del>
                  <span
                    class="screen-reader-text"
                  >
                    Discounted price:
                  </span>
                  <ins
                    class="wc-block-components-product-price__value is-discounted"
                  >
                    $11.20
                  </ins>
                </span>
              </div>
              <div
                class="wc-block-components-product-badge wc-block-components-sale-badge"
              >
                Save 
                <span
                  class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount"
                >
                  $1.60
                </span>
              </div>
              <div
                class="wc-block-components-product-metadata"
              >
                <div
                  class="wc-block-components-product-metadata__description"
                >
                  <p>
                    Lightweight baseball cap
                  </p>
                  

                </div>
                <ul
                  class="wc-block-components-product-details"
                >
                  <li
                    class="wc-block-components-product-details__color"
                  >
                    <span
                      class="wc-block-components-product-details__name"
                    >
                      Color
                      :
                    </span>
                     
                    <span
                      class="wc-block-components-product-details__value"
                    >
                      Orange
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="wc-block-cart-item__quantity"
              >
                <div
                  class="wc-block-components-quantity-selector"
                >
                  <input
                    aria-label="Quantity of Cap in your cart."
                    class="wc-block-components-quantity-selector__input"
                    min="0"
                    step="1"
                    type="number"
                    value="1"
                  />
                  <button
                    aria-label="Reduce quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--minus"
                    disabled=""
                  >
                    －
                  </button>
                  <button
                    aria-label="Increase quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--plus"
                  >
                    ＋
                  </button>
                </div>
                <button
                  class="wc-block-cart-item__remove-link"
                >
                  Remove item
                </button>
              </div>
            </td>
            <td
              class="wc-block-cart-item__total"
            >
              <div
                class="wc-block-cart-item__total-price-and-sale-badge-wrapper"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-product-price__value"
                  >
                    $11.20
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="wc-block-components-sidebar wc-block-cart__sidebar"
    >
      <h2
        class="wc-block-components-title wc-block-cart__totals-title"
      >
        Cart totals
      </h2>
      <div
        class="wc-block-components-totals-item"
      >
        <span
          class="wc-block-components-totals-item__label"
        >
          Subtotal
        </span>
        <span
          class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
        >
          $24.00
        </span>
        <div
          class="wc-block-components-totals-item__description"
        />
      </div>
      <div
        class="wc-block-components-totals-coupon wc-block-components-panel has-border"
      >
        <div>
          <button
            aria-expanded="false"
            class="wc-block-components-panel__button"
          >
            <svg
              aria-hidden="true"
              class="wc-block-components-panel__button-icon"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 9.4L12 14 7 9.4l-1 1.2 6 5.4 6-5.4z"
              />
            </svg>
            <span
              aria-hidden="true"
            >
              Coupon code
            </span>
            <span
              class="screen-reader-text"
            >
              Apply a coupon code
            </span>
          </button>
        </div>
        <div
          class="wc-block-components-panel__content"
          hidden=""
        >
          <div
            class="wc-block-components-totals-coupon__content"
          >
            <form
              class="wc-block-components-totals-coupon__form"
            >
              <div
                class="wc-block-components-text-input wc-block-components-totals-coupon__input is-active"
              >
                <input
                  aria-describedby=""
                  aria-label="Enter code"
                  autocapitalize="off"
                  autocomplete="off"
                  id="wc-block-components-totals-coupon__input-3"
                  type="text"
                  value=""
                />
                <label
                  for="wc-block-components-totals-coupon__input-3"
                >
                  Enter code
                </label>
              </div>
              <button
                class="components-button wc-block-components-button wc-block-components-totals-coupon__button"
                disabled=""
                type="submit"
              >
                <span
                  class="wc-block-components-button__text"
                >
                  Apply
                </span>
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        class="wc-block-components-discounts-meta"
      />
      <div
        class="wc-block-components-totals-shipping"
      >
        <div
          class="wc-block-components-totals-item"
        >
          <span
            class="wc-block-components-totals-item__label"
          >
            Shipping
          </span>
          <span
            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
          >
            $0.00
          </span>
          <div
            class="wc-block-components-totals-item__description"
          >
            <div
              class="wc-block-components-totals-item__description wc-block-components-totals-shipping__via"
            >
              via
               
              Free shipping
            </div>
          </div>
        </div>
        <fieldset
          class="wc-block-components-totals-shipping__fieldset"
        >
          <legend
            class="screen-reader-text"
          >
            Shipping options
          </legend>
          <div
            class="wc-block-components-shipping-rates-control wc-block-components-totals-shipping__options"
          >
            <div
              class="wc-block-components-shipping-rates-control__package wc-block-components-panel"
            >
              <div>
                <button
                  aria-expanded="true"
                  class="wc-block-components-panel__button"
                >
                  <svg
                    aria-hidden="true"
                    class="wc-block-components-panel__button-icon"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
                    />
                  </svg>
                  <div
                    class="wc-block-components-shipping-rates-control__package-title"
                  >
                    Shipping
                  </div>
                </button>
              </div>
              <div
                class="wc-block-components-panel__content"
              >
                <div
                  class="wc-block-components-radio-control"
                >
                  <label
                    class="wc-block-components-radio-control__option wc-block-components-radio-control__option-checked"
                    for="radio-control-3-free_shipping:1"
                  >
                    <input
                      aria-describedby="radio-control-3-free_shipping:1__label radio-control-3-free_shipping:1__description"
                      checked=""
                      class="wc-block-components-radio-control__input"
                      id="radio-control-3-free_shipping:1"
                      name="radio-control-3"
                      type="radio"
                      value="free_shipping:1"
                    />
                    <div
                      class="wc-block-components-radio-control__option-layout"
                    >
                      <div
                        class="wc-block-components-radio-control__label-group"
                      >
                        <span
                          class="wc-block-components-radio-control__label"
                          id="radio-control-3-free_shipping:1__label"
                        >
                          Free shipping
                        </span>
                      </div>
                      <div
                        class="wc-block-components-radio-control__description-group"
                      >
                        <span
                          class="wc-block-components-radio-control__description"
                          id="radio-control-3-free_shipping:1__description"
                        >
                          <span
                            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount"
                          >
                            $0.00
                          </span>
                          
                        </span>
                      </div>
                    </div>
                  </label>
                  <label
                    class="wc-block-components-radio-control__option"
                    for="radio-control-3-local_pickup:1"
                  >
                    <input
                      aria-describedby="radio-control-3-local_pickup:1__label radio-control-3-local_pickup:1__description"
                      class="wc-block-components-radio-control__input"
                      id="radio-control-3-local_pickup:1"
                      name="radio-control-3"
                      type="radio"
                      value="local_pickup:1"
                    />
                    <div
                      class="wc-block-components-radio-control__option-layout"
                    >
                      <div
                        class="wc-block-components-radio-control__label-group"
                      >
                        <span
                          class="wc-block-components-radio-control__label"
                          id="radio-control-3-local_pickup:1__label"
                        >
                          Local pickup
                        </span>
                      </div>
                      <div
                        class="wc-block-components-radio-control__description-group"
                      >
                        <span
                          class="wc-block-components-radio-control__description"
                          id="radio-control-3-local_pickup:1__description"
                        >
                          <span
                            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount"
                          >
                            $2.00
                          </span>
                          
                        </span>
                      </div>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="wc-block-components-totals-item wc-block-components-totals-taxes"
      >
        <span
          class="wc-block-components-totals-item__label"
        >
          Taxes
        </span>
        <span
          class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
        >
          $6.00
        </span>
        <div
          class="wc-block-components-totals-item__description"
        />
      </div>
      <div
        class="wc-block-components-totals-item wc-block-components-totals-footer-item"
      >
        <span
          class="wc-block-components-totals-item__label"
        >
          Total
        </span>
        <span
          class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
        >
          $30.00
        </span>
        <div
          class="wc-block-components-totals-item__description"
        />
      </div>
      <div
        class="wc-block-components-order-meta"
      />
      <div
        class="wc-block-cart__payment-options"
      >
        <div
          class="wc-block-cart__submit"
        >
          <div
            aria-hidden="true"
            style="bottom: 0px; left: 0px; opacity: 0; pointer-events: none; position: absolute; right: 0px; top: 0px; z-index: -1;"
          />
          <div
            class="wc-block-cart__submit-container"
          >
            <a
              class="components-button wc-block-components-button wc-block-cart__submit-button"
              href=""
            >
              <span
                class="wc-block-components-button__text"
              >
                Proceed to Checkout
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="display: none;"
  />
</div>
`;

exports[`Testing cart Shows individual tax lines if the store is set to do so 1`] = `
<div>
  <div
    aria-hidden="true"
    class="with-scroll-to-top__scroll-point"
  />
  <h2
    class="wc-block-components-title"
  >
    Your cart (3 items)
  </h2>
  <div
    class="wc-block-components-sidebar-layout wc-block-cart"
  >
    <iframe
      aria-hidden="true"
      frameborder="0"
      src="about:blank"
      style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
    <div
      class="wc-block-components-main wc-block-cart__main"
    >
      <table
        class="wc-block-cart-items"
      >
        <thead>
          <tr
            class="wc-block-cart-items__header"
          >
            <th
              class="wc-block-cart-items__header-image"
            >
              <span>
                Product
              </span>
            </th>
            <th
              class="wc-block-cart-items__header-product"
            >
              <span>
                Details
              </span>
            </th>
            <th
              class="wc-block-cart-items__header-total"
            >
              <span>
                Total
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="wc-block-cart-items__row"
          >
            <td
              aria-hidden="true"
              class="wc-block-cart-item__image"
            >
              <a
                href="https://example.org"
                tabindex="-1"
              >
                <img
                  alt=""
                  src="assets/img/beanie.jpg"
                />
              </a>
            </td>
            <td
              class="wc-block-cart-item__product"
            >
              <a
                class="wc-block-components-product-name"
                href="https://example.org"
              >
                Beanie
              </a>
              <div
                class="wc-block-components-product-badge wc-block-components-product-low-stock-badge"
              >
                2 left in stock
              </div>
              <div
                class="wc-block-cart-item__prices"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-product-price__value"
                  >
                    $6.40
                  </span>
                </span>
              </div>
              <div
                class="wc-block-components-product-metadata"
              >
                <div
                  class="wc-block-components-product-metadata__description"
                >
                  <p>
                    Warm hat for winter
                  </p>
                  

                </div>
                <ul
                  class="wc-block-components-product-details"
                >
                  <li
                    class="wc-block-components-product-details__color"
                  >
                    <span
                      class="wc-block-components-product-details__name"
                    >
                      Color
                      :
                    </span>
                     
                    <span
                      class="wc-block-components-product-details__value"
                    >
                      Yellow
                    </span>
                  </li>
                  <li
                    class="wc-block-components-product-details__size"
                  >
                    <span
                      class="wc-block-components-product-details__name"
                    >
                      Size
                      :
                    </span>
                     
                    <span
                      class="wc-block-components-product-details__value"
                    >
                      Small
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="wc-block-cart-item__quantity"
              >
                <div
                  class="wc-block-components-quantity-selector"
                >
                  <input
                    aria-label="Quantity of Beanie in your cart."
                    class="wc-block-components-quantity-selector__input"
                    min="0"
                    step="1"
                    type="number"
                    value="2"
                  />
                  <button
                    aria-label="Reduce quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--minus"
                  >
                    －
                  </button>
                  <button
                    aria-label="Increase quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--plus"
                  >
                    ＋
                  </button>
                </div>
                <button
                  class="wc-block-cart-item__remove-link"
                >
                  Remove item
                </button>
              </div>
            </td>
            <td
              class="wc-block-cart-item__total"
            >
              <div
                class="wc-block-cart-item__total-price-and-sale-badge-wrapper"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-product-price__value"
                  >
                    $12.80
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="wc-block-cart-items__row"
          >
            <td
              aria-hidden="true"
              class="wc-block-cart-item__image"
            >
              <a
                href="https://example.org"
                tabindex="-1"
              >
                <img
                  alt=""
                  src="assets/img/cap.jpg"
                />
              </a>
            </td>
            <td
              class="wc-block-cart-item__product"
            >
              <a
                class="wc-block-components-product-name"
                href="https://example.org"
              >
                Cap
              </a>
              <div
                class="wc-block-cart-item__prices"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="screen-reader-text"
                  >
                    Previous price:
                  </span>
                  <del
                    class="wc-block-components-product-price__regular"
                  >
                    $12.80
                  </del>
                  <span
                    class="screen-reader-text"
                  >
                    Discounted price:
                  </span>
                  <ins
                    class="wc-block-components-product-price__value is-discounted"
                  >
                    $11.20
                  </ins>
                </span>
              </div>
              <div
                class="wc-block-components-product-badge wc-block-components-sale-badge"
              >
                Save 
                <span
                  class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount"
                >
                  $1.60
                </span>
              </div>
              <div
                class="wc-block-components-product-metadata"
              >
                <div
                  class="wc-block-components-product-metadata__description"
                >
                  <p>
                    Lightweight baseball cap
                  </p>
                  

                </div>
                <ul
                  class="wc-block-components-product-details"
                >
                  <li
                    class="wc-block-components-product-details__color"
                  >
                    <span
                      class="wc-block-components-product-details__name"
                    >
                      Color
                      :
                    </span>
                     
                    <span
                      class="wc-block-components-product-details__value"
                    >
                      Orange
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="wc-block-cart-item__quantity"
              >
                <div
                  class="wc-block-components-quantity-selector"
                >
                  <input
                    aria-label="Quantity of Cap in your cart."
                    class="wc-block-components-quantity-selector__input"
                    min="0"
                    step="1"
                    type="number"
                    value="1"
                  />
                  <button
                    aria-label="Reduce quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--minus"
                    disabled=""
                  >
                    －
                  </button>
                  <button
                    aria-label="Increase quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--plus"
                  >
                    ＋
                  </button>
                </div>
                <button
                  class="wc-block-cart-item__remove-link"
                >
                  Remove item
                </button>
              </div>
            </td>
            <td
              class="wc-block-cart-item__total"
            >
              <div
                class="wc-block-cart-item__total-price-and-sale-badge-wrapper"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-product-price__value"
                  >
                    $11.20
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="wc-block-components-sidebar wc-block-cart__sidebar"
    >
      <h2
        class="wc-block-components-title wc-block-cart__totals-title"
      >
        Cart totals
      </h2>
      <div
        class="wc-block-components-totals-item"
      >
        <span
          class="wc-block-components-totals-item__label"
        >
          Subtotal
        </span>
        <span
          class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
        >
          $24.00
        </span>
        <div
          class="wc-block-components-totals-item__description"
        />
      </div>
      <div
        class="wc-block-components-totals-coupon wc-block-components-panel has-border"
      >
        <div>
          <button
            aria-expanded="false"
            class="wc-block-components-panel__button"
          >
            <svg
              aria-hidden="true"
              class="wc-block-components-panel__button-icon"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 9.4L12 14 7 9.4l-1 1.2 6 5.4 6-5.4z"
              />
            </svg>
            <span
              aria-hidden="true"
            >
              Coupon code
            </span>
            <span
              class="screen-reader-text"
            >
              Apply a coupon code
            </span>
          </button>
        </div>
        <div
          class="wc-block-components-panel__content"
          hidden=""
        >
          <div
            class="wc-block-components-totals-coupon__content"
          >
            <form
              class="wc-block-components-totals-coupon__form"
            >
              <div
                class="wc-block-components-text-input wc-block-components-totals-coupon__input is-active"
              >
                <input
                  aria-describedby=""
                  aria-label="Enter code"
                  autocapitalize="off"
                  autocomplete="off"
                  id="wc-block-components-totals-coupon__input-5"
                  type="text"
                  value=""
                />
                <label
                  for="wc-block-components-totals-coupon__input-5"
                >
                  Enter code
                </label>
              </div>
              <button
                class="components-button wc-block-components-button wc-block-components-totals-coupon__button"
                disabled=""
                type="submit"
              >
                <span
                  class="wc-block-components-button__text"
                >
                  Apply
                </span>
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        class="wc-block-components-discounts-meta"
      />
      <div
        class="wc-block-components-totals-shipping"
      >
        <div
          class="wc-block-components-totals-item"
        >
          <span
            class="wc-block-components-totals-item__label"
          >
            Shipping
          </span>
          <span
            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
          >
            $0.00
          </span>
          <div
            class="wc-block-components-totals-item__description"
          >
            <div
              class="wc-block-components-totals-item__description wc-block-components-totals-shipping__via"
            >
              via
               
              Free shipping
            </div>
          </div>
        </div>
        <fieldset
          class="wc-block-components-totals-shipping__fieldset"
        >
          <legend
            class="screen-reader-text"
          >
            Shipping options
          </legend>
          <div
            class="wc-block-components-shipping-rates-control wc-block-components-totals-shipping__options"
          >
            <div
              class="wc-block-components-shipping-rates-control__package wc-block-components-panel"
            >
              <div>
                <button
                  aria-expanded="true"
                  class="wc-block-components-panel__button"
                >
                  <svg
                    aria-hidden="true"
                    class="wc-block-components-panel__button-icon"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
                    />
                  </svg>
                  <div
                    class="wc-block-components-shipping-rates-control__package-title"
                  >
                    Shipping
                  </div>
                </button>
              </div>
              <div
                class="wc-block-components-panel__content"
              >
                <div
                  class="wc-block-components-radio-control"
                >
                  <label
                    class="wc-block-components-radio-control__option wc-block-components-radio-control__option-checked"
                    for="radio-control-5-free_shipping:1"
                  >
                    <input
                      aria-describedby="radio-control-5-free_shipping:1__label radio-control-5-free_shipping:1__description"
                      checked=""
                      class="wc-block-components-radio-control__input"
                      id="radio-control-5-free_shipping:1"
                      name="radio-control-5"
                      type="radio"
                      value="free_shipping:1"
                    />
                    <div
                      class="wc-block-components-radio-control__option-layout"
                    >
                      <div
                        class="wc-block-components-radio-control__label-group"
                      >
                        <span
                          class="wc-block-components-radio-control__label"
                          id="radio-control-5-free_shipping:1__label"
                        >
                          Free shipping
                        </span>
                      </div>
                      <div
                        class="wc-block-components-radio-control__description-group"
                      >
                        <span
                          class="wc-block-components-radio-control__description"
                          id="radio-control-5-free_shipping:1__description"
                        >
                          <span
                            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount"
                          >
                            $0.00
                          </span>
                          
                        </span>
                      </div>
                    </div>
                  </label>
                  <label
                    class="wc-block-components-radio-control__option"
                    for="radio-control-5-local_pickup:1"
                  >
                    <input
                      aria-describedby="radio-control-5-local_pickup:1__label radio-control-5-local_pickup:1__description"
                      class="wc-block-components-radio-control__input"
                      id="radio-control-5-local_pickup:1"
                      name="radio-control-5"
                      type="radio"
                      value="local_pickup:1"
                    />
                    <div
                      class="wc-block-components-radio-control__option-layout"
                    >
                      <div
                        class="wc-block-components-radio-control__label-group"
                      >
                        <span
                          class="wc-block-components-radio-control__label"
                          id="radio-control-5-local_pickup:1__label"
                        >
                          Local pickup
                        </span>
                      </div>
                      <div
                        class="wc-block-components-radio-control__description-group"
                      >
                        <span
                          class="wc-block-components-radio-control__description"
                          id="radio-control-5-local_pickup:1__description"
                        >
                          <span
                            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount"
                          >
                            $2.00
                          </span>
                          
                        </span>
                      </div>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="wc-block-components-totals-taxes"
      >
        <div
          class="wc-block-components-totals-item wc-block-components-totals-taxes__grouped-rate"
        >
          <span
            class="wc-block-components-totals-item__label"
          >
            Sales tax
          </span>
          <span
            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
          >
            $6.00
          </span>
          <div
            class="wc-block-components-totals-item__description"
          />
        </div>
         
      </div>
      <div
        class="wc-block-components-totals-item wc-block-components-totals-footer-item"
      >
        <span
          class="wc-block-components-totals-item__label"
        >
          Total
        </span>
        <span
          class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
        >
          $30.00
        </span>
        <div
          class="wc-block-components-totals-item__description"
        />
      </div>
      <div
        class="wc-block-components-order-meta"
      />
      <div
        class="wc-block-cart__payment-options"
      >
        <div
          class="wc-block-cart__submit"
        >
          <div
            aria-hidden="true"
            style="bottom: 0px; left: 0px; opacity: 0; pointer-events: none; position: absolute; right: 0px; top: 0px; z-index: -1;"
          />
          <div
            class="wc-block-cart__submit-container"
          >
            <a
              class="components-button wc-block-components-button wc-block-cart__submit-button"
              href=""
            >
              <span
                class="wc-block-components-button__text"
              >
                Proceed to Checkout
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="display: none;"
  />
</div>
`;

exports[`Testing cart Shows rate percentages after tax lines if the block is set to do so 1`] = `
<div>
  <div
    aria-hidden="true"
    class="with-scroll-to-top__scroll-point"
  />
  <h2
    class="wc-block-components-title"
  >
    Your cart (3 items)
  </h2>
  <div
    class="wc-block-components-sidebar-layout wc-block-cart"
  >
    <iframe
      aria-hidden="true"
      frameborder="0"
      src="about:blank"
      style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
    <div
      class="wc-block-components-main wc-block-cart__main"
    >
      <table
        class="wc-block-cart-items"
      >
        <thead>
          <tr
            class="wc-block-cart-items__header"
          >
            <th
              class="wc-block-cart-items__header-image"
            >
              <span>
                Product
              </span>
            </th>
            <th
              class="wc-block-cart-items__header-product"
            >
              <span>
                Details
              </span>
            </th>
            <th
              class="wc-block-cart-items__header-total"
            >
              <span>
                Total
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="wc-block-cart-items__row"
          >
            <td
              aria-hidden="true"
              class="wc-block-cart-item__image"
            >
              <a
                href="https://example.org"
                tabindex="-1"
              >
                <img
                  alt=""
                  src="assets/img/beanie.jpg"
                />
              </a>
            </td>
            <td
              class="wc-block-cart-item__product"
            >
              <a
                class="wc-block-components-product-name"
                href="https://example.org"
              >
                Beanie
              </a>
              <div
                class="wc-block-components-product-badge wc-block-components-product-low-stock-badge"
              >
                2 left in stock
              </div>
              <div
                class="wc-block-cart-item__prices"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-product-price__value"
                  >
                    $6.40
                  </span>
                </span>
              </div>
              <div
                class="wc-block-components-product-metadata"
              >
                <div
                  class="wc-block-components-product-metadata__description"
                >
                  <p>
                    Warm hat for winter
                  </p>
                  

                </div>
                <ul
                  class="wc-block-components-product-details"
                >
                  <li
                    class="wc-block-components-product-details__color"
                  >
                    <span
                      class="wc-block-components-product-details__name"
                    >
                      Color
                      :
                    </span>
                     
                    <span
                      class="wc-block-components-product-details__value"
                    >
                      Yellow
                    </span>
                  </li>
                  <li
                    class="wc-block-components-product-details__size"
                  >
                    <span
                      class="wc-block-components-product-details__name"
                    >
                      Size
                      :
                    </span>
                     
                    <span
                      class="wc-block-components-product-details__value"
                    >
                      Small
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="wc-block-cart-item__quantity"
              >
                <div
                  class="wc-block-components-quantity-selector"
                >
                  <input
                    aria-label="Quantity of Beanie in your cart."
                    class="wc-block-components-quantity-selector__input"
                    min="0"
                    step="1"
                    type="number"
                    value="2"
                  />
                  <button
                    aria-label="Reduce quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--minus"
                  >
                    －
                  </button>
                  <button
                    aria-label="Increase quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--plus"
                  >
                    ＋
                  </button>
                </div>
                <button
                  class="wc-block-cart-item__remove-link"
                >
                  Remove item
                </button>
              </div>
            </td>
            <td
              class="wc-block-cart-item__total"
            >
              <div
                class="wc-block-cart-item__total-price-and-sale-badge-wrapper"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-product-price__value"
                  >
                    $12.80
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="wc-block-cart-items__row"
          >
            <td
              aria-hidden="true"
              class="wc-block-cart-item__image"
            >
              <a
                href="https://example.org"
                tabindex="-1"
              >
                <img
                  alt=""
                  src="assets/img/cap.jpg"
                />
              </a>
            </td>
            <td
              class="wc-block-cart-item__product"
            >
              <a
                class="wc-block-components-product-name"
                href="https://example.org"
              >
                Cap
              </a>
              <div
                class="wc-block-cart-item__prices"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="screen-reader-text"
                  >
                    Previous price:
                  </span>
                  <del
                    class="wc-block-components-product-price__regular"
                  >
                    $12.80
                  </del>
                  <span
                    class="screen-reader-text"
                  >
                    Discounted price:
                  </span>
                  <ins
                    class="wc-block-components-product-price__value is-discounted"
                  >
                    $11.20
                  </ins>
                </span>
              </div>
              <div
                class="wc-block-components-product-badge wc-block-components-sale-badge"
              >
                Save 
                <span
                  class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount"
                >
                  $1.60
                </span>
              </div>
              <div
                class="wc-block-components-product-metadata"
              >
                <div
                  class="wc-block-components-product-metadata__description"
                >
                  <p>
                    Lightweight baseball cap
                  </p>
                  

                </div>
                <ul
                  class="wc-block-components-product-details"
                >
                  <li
                    class="wc-block-components-product-details__color"
                  >
                    <span
                      class="wc-block-components-product-details__name"
                    >
                      Color
                      :
                    </span>
                     
                    <span
                      class="wc-block-components-product-details__value"
                    >
                      Orange
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="wc-block-cart-item__quantity"
              >
                <div
                  class="wc-block-components-quantity-selector"
                >
                  <input
                    aria-label="Quantity of Cap in your cart."
                    class="wc-block-components-quantity-selector__input"
                    min="0"
                    step="1"
                    type="number"
                    value="1"
                  />
                  <button
                    aria-label="Reduce quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--minus"
                    disabled=""
                  >
                    －
                  </button>
                  <button
                    aria-label="Increase quantity"
                    class="wc-block-components-quantity-selector__button wc-block-components-quantity-selector__button--plus"
                  >
                    ＋
                  </button>
                </div>
                <button
                  class="wc-block-cart-item__remove-link"
                >
                  Remove item
                </button>
              </div>
            </td>
            <td
              class="wc-block-cart-item__total"
            >
              <div
                class="wc-block-cart-item__total-price-and-sale-badge-wrapper"
              >
                <span
                  class="price wc-block-components-product-price"
                >
                  <span
                    class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-product-price__value"
                  >
                    $11.20
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="wc-block-components-sidebar wc-block-cart__sidebar"
    >
      <h2
        class="wc-block-components-title wc-block-cart__totals-title"
      >
        Cart totals
      </h2>
      <div
        class="wc-block-components-totals-item"
      >
        <span
          class="wc-block-components-totals-item__label"
        >
          Subtotal
        </span>
        <span
          class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
        >
          $24.00
        </span>
        <div
          class="wc-block-components-totals-item__description"
        />
      </div>
      <div
        class="wc-block-components-totals-coupon wc-block-components-panel has-border"
      >
        <div>
          <button
            aria-expanded="false"
            class="wc-block-components-panel__button"
          >
            <svg
              aria-hidden="true"
              class="wc-block-components-panel__button-icon"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 9.4L12 14 7 9.4l-1 1.2 6 5.4 6-5.4z"
              />
            </svg>
            <span
              aria-hidden="true"
            >
              Coupon code
            </span>
            <span
              class="screen-reader-text"
            >
              Apply a coupon code
            </span>
          </button>
        </div>
        <div
          class="wc-block-components-panel__content"
          hidden=""
        >
          <div
            class="wc-block-components-totals-coupon__content"
          >
            <form
              class="wc-block-components-totals-coupon__form"
            >
              <div
                class="wc-block-components-text-input wc-block-components-totals-coupon__input is-active"
              >
                <input
                  aria-describedby=""
                  aria-label="Enter code"
                  autocapitalize="off"
                  autocomplete="off"
                  id="wc-block-components-totals-coupon__input-7"
                  type="text"
                  value=""
                />
                <label
                  for="wc-block-components-totals-coupon__input-7"
                >
                  Enter code
                </label>
              </div>
              <button
                class="components-button wc-block-components-button wc-block-components-totals-coupon__button"
                disabled=""
                type="submit"
              >
                <span
                  class="wc-block-components-button__text"
                >
                  Apply
                </span>
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        class="wc-block-components-discounts-meta"
      />
      <div
        class="wc-block-components-totals-shipping"
      >
        <div
          class="wc-block-components-totals-item"
        >
          <span
            class="wc-block-components-totals-item__label"
          >
            Shipping
          </span>
          <span
            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
          >
            $0.00
          </span>
          <div
            class="wc-block-components-totals-item__description"
          >
            <div
              class="wc-block-components-totals-item__description wc-block-components-totals-shipping__via"
            >
              via
               
              Free shipping
            </div>
          </div>
        </div>
        <fieldset
          class="wc-block-components-totals-shipping__fieldset"
        >
          <legend
            class="screen-reader-text"
          >
            Shipping options
          </legend>
          <div
            class="wc-block-components-shipping-rates-control wc-block-components-totals-shipping__options"
          >
            <div
              class="wc-block-components-shipping-rates-control__package wc-block-components-panel"
            >
              <div>
                <button
                  aria-expanded="true"
                  class="wc-block-components-panel__button"
                >
                  <svg
                    aria-hidden="true"
                    class="wc-block-components-panel__button-icon"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
                    />
                  </svg>
                  <div
                    class="wc-block-components-shipping-rates-control__package-title"
                  >
                    Shipping
                  </div>
                </button>
              </div>
              <div
                class="wc-block-components-panel__content"
              >
                <div
                  class="wc-block-components-radio-control"
                >
                  <label
                    class="wc-block-components-radio-control__option wc-block-components-radio-control__option-checked"
                    for="radio-control-7-free_shipping:1"
                  >
                    <input
                      aria-describedby="radio-control-7-free_shipping:1__label radio-control-7-free_shipping:1__description"
                      checked=""
                      class="wc-block-components-radio-control__input"
                      id="radio-control-7-free_shipping:1"
                      name="radio-control-7"
                      type="radio"
                      value="free_shipping:1"
                    />
                    <div
                      class="wc-block-components-radio-control__option-layout"
                    >
                      <div
                        class="wc-block-components-radio-control__label-group"
                      >
                        <span
                          class="wc-block-components-radio-control__label"
                          id="radio-control-7-free_shipping:1__label"
                        >
                          Free shipping
                        </span>
                      </div>
                      <div
                        class="wc-block-components-radio-control__description-group"
                      >
                        <span
                          class="wc-block-components-radio-control__description"
                          id="radio-control-7-free_shipping:1__description"
                        >
                          <span
                            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount"
                          >
                            $0.00
                          </span>
                          
                        </span>
                      </div>
                    </div>
                  </label>
                  <label
                    class="wc-block-components-radio-control__option"
                    for="radio-control-7-local_pickup:1"
                  >
                    <input
                      aria-describedby="radio-control-7-local_pickup:1__label radio-control-7-local_pickup:1__description"
                      class="wc-block-components-radio-control__input"
                      id="radio-control-7-local_pickup:1"
                      name="radio-control-7"
                      type="radio"
                      value="local_pickup:1"
                    />
                    <div
                      class="wc-block-components-radio-control__option-layout"
                    >
                      <div
                        class="wc-block-components-radio-control__label-group"
                      >
                        <span
                          class="wc-block-components-radio-control__label"
                          id="radio-control-7-local_pickup:1__label"
                        >
                          Local pickup
                        </span>
                      </div>
                      <div
                        class="wc-block-components-radio-control__description-group"
                      >
                        <span
                          class="wc-block-components-radio-control__description"
                          id="radio-control-7-local_pickup:1__description"
                        >
                          <span
                            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount"
                          >
                            $2.00
                          </span>
                          
                        </span>
                      </div>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="wc-block-components-totals-taxes"
      >
        <div
          class="wc-block-components-totals-item wc-block-components-totals-taxes__grouped-rate"
        >
          <span
            class="wc-block-components-totals-item__label"
          >
            Sales tax 20%
          </span>
          <span
            class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
          >
            $6.00
          </span>
          <div
            class="wc-block-components-totals-item__description"
          />
        </div>
         
      </div>
      <div
        class="wc-block-components-totals-item wc-block-components-totals-footer-item"
      >
        <span
          class="wc-block-components-totals-item__label"
        >
          Total
        </span>
        <span
          class="wc-block-formatted-money-amount wc-block-components-formatted-money-amount wc-block-components-totals-item__value"
        >
          $30.00
        </span>
        <div
          class="wc-block-components-totals-item__description"
        />
      </div>
      <div
        class="wc-block-components-order-meta"
      />
      <div
        class="wc-block-cart__payment-options"
      >
        <div
          class="wc-block-cart__submit"
        >
          <div
            aria-hidden="true"
            style="bottom: 0px; left: 0px; opacity: 0; pointer-events: none; position: absolute; right: 0px; top: 0px; z-index: -1;"
          />
          <div
            class="wc-block-cart__submit-container"
          >
            <a
              class="components-button wc-block-components-button wc-block-cart__submit-button"
              href=""
            >
              <span
                class="wc-block-components-button__text"
              >
                Proceed to Checkout
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="display: none;"
  />
</div>
`;
